y.output
Terminals unused in grammar

   NIL
   VARFX


Grammar

    0 $accept: program $end

    1 program: function

    2 function: function functionDeclaration
    3         | function varDeclaration
    4         | function constDeclaration
    5         | /* empty */

    6 type: INT
    7     | STR
    8     | BOOL

    9 functionParam: variable

   10 $@1: /* empty */

   11 functionParam: variable $@1 ',' functionParam
   12              | /* empty */

   13 functionArgs: expr

   14 $@2: /* empty */

   15 functionArgs: expr $@2 ',' functionArgs
   16             | /* empty */

   17 varDeclaration: variable ';'
   18               | variable '=' expr ';'

   19 constDeclaration: CONST variable '=' expr ';'

   20 variable: type VARIDENTIFIER

   21 $@3: /* empty */

   22 $@4: /* empty */

   23 $@5: /* empty */

   24 $@6: /* empty */

   25 functionDeclaration: type FUNCTION FUNCIDENTIFIER $@3 '(' $@4 functionParam ')' $@5 openScope $@6 stmtList closeScope

   26 $@7: /* empty */

   27 $@8: /* empty */

   28 $@9: /* empty */

   29 $@10: /* empty */

   30 functionDeclaration: VOID FUNCTION FUNCIDENTIFIER $@7 '(' $@8 functionParam ')' $@9 openScope $@10 stmtList closeScope

   31 stmtBlock: openScope stmtList closeScope

   32 stmt: ';'
   33     | expr ';'
   34     | PRINT '(' expr ')' ';'
   35     | whileStmt
   36     | doStmt
   37     | forStmt
   38     | continueStmt
   39     | breakStmt
   40     | ifStmt
   41     | stmtBlock
   42     | varDeclaration
   43     | constDeclaration
   44     | returnStmt
   45     | switchStmt

   46 $@11: /* empty */

   47 ifStmt: IF '(' expr ')' $@11 stmt ifContinue

   48 ifContinue: /* empty */

   49 $@12: /* empty */

   50 ifContinue: ELSE $@12 stmt

   51 returnStmt: RETURN expr ';'
   52           | RETURN ';'

   53 breakStmt: BREAK ';'

   54 continueStmt: CONTINUE ';'

   55 $@13: /* empty */

   56 switchStmt: SWITCH '(' expr ')' openScope $@13 caseStmts closeScope

   57 caseStmts: caseStmt caseStmts
   58          | caseStmt

   59 caseStmt: CASE expr ':' stmtList
   60         | DEFAULT ':' stmtList

   61 $@14: /* empty */

   62 $@15: /* empty */

   63 whileStmt: WHILE '(' $@14 expr ')' openScope $@15 stmtList closeScope

   64 $@16: /* empty */

   65 $@17: /* empty */

   66 forStmt: FOR '(' $@16 loopExpression ')' openScope $@17 stmtList closeScope

   67 $@18: /* empty */

   68 $@19: /* empty */

   69 doStmt: DO openScope $@18 stmtList closeScope $@19 WHILE '(' expr ')' ';'

   70 $@20: /* empty */

   71 $@21: /* empty */

   72 $@22: /* empty */

   73 loopExpression: INT VARIDENTIFIER $@20 '=' expr $@21 ';' expr $@22 ';' expr

   74 $@23: /* empty */

   75 loopExpression: VARIDENTIFIER $@23 '=' expr ';' expr ';' expr

   76 stmtList: stmt
   77         | stmtList stmt

   78 expr: lValue '=' expr
   79     | lValue
   80     | consValues
   81     | '-' expr

   82 $@24: /* empty */

   83 expr: FUNCIDENTIFIER $@24 '(' functionArgs ')'
   84     | expr '+' expr
   85     | expr '-' expr
   86     | expr '*' expr
   87     | expr '/' expr
   88     | expr '<' expr
   89     | expr '>' expr
   90     | expr '%' expr
   91     | expr OR expr
   92     | expr AND expr
   93     | NOT expr
   94     | lValue INCASSIGNMENT expr
   95     | lValue DECASSIGNMENT expr
   96     | lValue DIVIDEASSIGNMENT expr
   97     | lValue MULTIPLYASSIGNMENT expr
   98     | lValue INC
   99     | INC lValue
  100     | lValue DEC
  101     | DEC lValue
  102     | expr GE expr
  103     | expr LE expr
  104     | expr NE expr
  105     | expr EQ expr
  106     | '(' expr ')'

  107 lValue: VARIDENTIFIER

  108 consValues: INTEGER
  109           | STRING
  110           | FALSEBOOL
  111           | TRUEBOOL

  112 openScope: '{'

  113 closeScope: '}'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 90
'(' (40) 25 30 34 47 56 63 66 69 83 106
')' (41) 25 30 34 47 56 63 66 69 83 106
'*' (42) 86
'+' (43) 84
',' (44) 11 15
'-' (45) 81 85
'/' (47) 87
':' (58) 59 60
';' (59) 17 18 19 32 33 34 51 52 53 54 69 73 75
'<' (60) 88
'=' (61) 18 19 73 75 78
'>' (62) 89
'{' (123) 112
'}' (125) 113
error (256)
STRING (258) 109
INTEGER (259) 108
VARIDENTIFIER (260) 20 73 75 107
TRUEBOOL (261) 111
FALSEBOOL (262) 110
INT (263) 6 73
STR (264) 7
BOOL (265) 8
VOID (266) 30
SWITCH (267) 56
CASE (268) 59
DEFAULT (269) 60
CONST (270) 19
DO (271) 69
NIL (272)
OR (273) 91
AND (274) 92
NOT (275) 93
FUNCTION (276) 25 30
RETURN (277) 51 52
INC (278) 98 99
DEC (279) 100 101
INCASSIGNMENT (280) 94
DECASSIGNMENT (281) 95
MULTIPLYASSIGNMENT (282) 97
DIVIDEASSIGNMENT (283) 96
FUNCIDENTIFIER (284) 25 30 83
WHILE (285) 63 69
IF (286) 47
PRINT (287) 34
FOR (288) 66
CONTINUE (289) 54
BREAK (290) 53
VARFX (291)
IFX (292)
ELSE (293) 50
NE (294) 104
EQ (295) 105
LE (296) 103
GE (297) 102
UMINUS (298)


Nonterminals, with rules where they appear

$accept (59)
    on left: 0
program (60)
    on left: 1, on right: 0
function (61)
    on left: 2 3 4 5, on right: 1 2 3 4
type (62)
    on left: 6 7 8, on right: 20 25
functionParam (63)
    on left: 9 11 12, on right: 11 25 30
$@1 (64)
    on left: 10, on right: 11
functionArgs (65)
    on left: 13 15 16, on right: 15 83
$@2 (66)
    on left: 14, on right: 15
varDeclaration (67)
    on left: 17 18, on right: 3 42
constDeclaration (68)
    on left: 19, on right: 4 43
variable (69)
    on left: 20, on right: 9 11 17 18 19
functionDeclaration (70)
    on left: 25 30, on right: 2
$@3 (71)
    on left: 21, on right: 25
$@4 (72)
    on left: 22, on right: 25
$@5 (73)
    on left: 23, on right: 25
$@6 (74)
    on left: 24, on right: 25
$@7 (75)
    on left: 26, on right: 30
$@8 (76)
    on left: 27, on right: 30
$@9 (77)
    on left: 28, on right: 30
$@10 (78)
    on left: 29, on right: 30
stmtBlock (79)
    on left: 31, on right: 41
stmt (80)
    on left: 32 33 34 35 36 37 38 39 40 41 42 43 44 45, on right: 47
    50 76 77
ifStmt (81)
    on left: 47, on right: 40
$@11 (82)
    on left: 46, on right: 47
ifContinue (83)
    on left: 48 50, on right: 47
$@12 (84)
    on left: 49, on right: 50
returnStmt (85)
    on left: 51 52, on right: 44
breakStmt (86)
    on left: 53, on right: 39
continueStmt (87)
    on left: 54, on right: 38
switchStmt (88)
    on left: 56, on right: 45
$@13 (89)
    on left: 55, on right: 56
caseStmts (90)
    on left: 57 58, on right: 56 57
caseStmt (91)
    on left: 59 60, on right: 57 58
whileStmt (92)
    on left: 63, on right: 35
$@14 (93)
    on left: 61, on right: 63
$@15 (94)
    on left: 62, on right: 63
forStmt (95)
    on left: 66, on right: 37
$@16 (96)
    on left: 64, on right: 66
$@17 (97)
    on left: 65, on right: 66
doStmt (98)
    on left: 69, on right: 36
$@18 (99)
    on left: 67, on right: 69
$@19 (100)
    on left: 68, on right: 69
loopExpression (101)
    on left: 73 75, on right: 66
$@20 (102)
    on left: 70, on right: 73
$@21 (103)
    on left: 71, on right: 73
$@22 (104)
    on left: 72, on right: 73
$@23 (105)
    on left: 74, on right: 75
stmtList (106)
    on left: 76 77, on right: 25 30 31 59 60 63 66 69 77
expr (107)
    on left: 78 79 80 81 83 84 85 86 87 88 89 90 91 92 93 94 95 96
    97 98 99 100 101 102 103 104 105 106, on right: 13 15 18 19 33
    34 47 51 56 59 63 69 73 75 78 81 84 85 86 87 88 89 90 91 92 93
    94 95 96 97 102 103 104 105 106
$@24 (108)
    on left: 82, on right: 83
lValue (109)
    on left: 107, on right: 78 79 94 95 96 97 98 99 100 101
consValues (110)
    on left: 108 109 110 111, on right: 80
openScope (111)
    on left: 112, on right: 25 30 31 56 63 66 69
closeScope (112)
    on left: 113, on right: 25 30 31 56 63 66 69


state 0

    0 $accept: . program $end

    $default  reduce using rule 5 (function)

    program   go to state 1
    function  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: function .
    2 function: function . functionDeclaration
    3         | function . varDeclaration
    4         | function . constDeclaration

    INT    shift, and go to state 4
    STR    shift, and go to state 5
    BOOL   shift, and go to state 6
    VOID   shift, and go to state 7
    CONST  shift, and go to state 8

    $default  reduce using rule 1 (program)

    type                 go to state 9
    varDeclaration       go to state 10
    constDeclaration     go to state 11
    variable             go to state 12
    functionDeclaration  go to state 13


state 3

    0 $accept: program $end .

    $default  accept


state 4

    6 type: INT .

    $default  reduce using rule 6 (type)


state 5

    7 type: STR .

    $default  reduce using rule 7 (type)


state 6

    8 type: BOOL .

    $default  reduce using rule 8 (type)


state 7

   30 functionDeclaration: VOID . FUNCTION FUNCIDENTIFIER $@7 '(' $@8 functionParam ')' $@9 openScope $@10 stmtList closeScope

    FUNCTION  shift, and go to state 14


state 8

   19 constDeclaration: CONST . variable '=' expr ';'

    INT   shift, and go to state 4
    STR   shift, and go to state 5
    BOOL  shift, and go to state 6

    type      go to state 15
    variable  go to state 16


state 9

   20 variable: type . VARIDENTIFIER
   25 functionDeclaration: type . FUNCTION FUNCIDENTIFIER $@3 '(' $@4 functionParam ')' $@5 openScope $@6 stmtList closeScope

    VARIDENTIFIER  shift, and go to state 17
    FUNCTION       shift, and go to state 18


state 10

    3 function: function varDeclaration .

    $default  reduce using rule 3 (function)


state 11

    4 function: function constDeclaration .

    $default  reduce using rule 4 (function)


state 12

   17 varDeclaration: variable . ';'
   18               | variable . '=' expr ';'

    ';'  shift, and go to state 19
    '='  shift, and go to state 20


state 13

    2 function: function functionDeclaration .

    $default  reduce using rule 2 (function)


state 14

   30 functionDeclaration: VOID FUNCTION . FUNCIDENTIFIER $@7 '(' $@8 functionParam ')' $@9 openScope $@10 stmtList closeScope

    FUNCIDENTIFIER  shift, and go to state 21


state 15

   20 variable: type . VARIDENTIFIER

    VARIDENTIFIER  shift, and go to state 17


state 16

   19 constDeclaration: CONST variable . '=' expr ';'

    '='  shift, and go to state 22


state 17

   20 variable: type VARIDENTIFIER .

    $default  reduce using rule 20 (variable)


state 18

   25 functionDeclaration: type FUNCTION . FUNCIDENTIFIER $@3 '(' $@4 functionParam ')' $@5 openScope $@6 stmtList closeScope

    FUNCIDENTIFIER  shift, and go to state 23


state 19

   17 varDeclaration: variable ';' .

    $default  reduce using rule 17 (varDeclaration)


state 20

   18 varDeclaration: variable '=' . expr ';'

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 35
    lValue      go to state 36
    consValues  go to state 37


state 21

   30 functionDeclaration: VOID FUNCTION FUNCIDENTIFIER . $@7 '(' $@8 functionParam ')' $@9 openScope $@10 stmtList closeScope

    $default  reduce using rule 26 ($@7)

    $@7  go to state 38


state 22

   19 constDeclaration: CONST variable '=' . expr ';'

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 39
    lValue      go to state 36
    consValues  go to state 37


state 23

   25 functionDeclaration: type FUNCTION FUNCIDENTIFIER . $@3 '(' $@4 functionParam ')' $@5 openScope $@6 stmtList closeScope

    $default  reduce using rule 21 ($@3)

    $@3  go to state 40


state 24

  109 consValues: STRING .

    $default  reduce using rule 109 (consValues)


state 25

  108 consValues: INTEGER .

    $default  reduce using rule 108 (consValues)


state 26

  107 lValue: VARIDENTIFIER .

    $default  reduce using rule 107 (lValue)


state 27

  111 consValues: TRUEBOOL .

    $default  reduce using rule 111 (consValues)


state 28

  110 consValues: FALSEBOOL .

    $default  reduce using rule 110 (consValues)


state 29

   93 expr: NOT . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 41
    lValue      go to state 36
    consValues  go to state 37


state 30

   99 expr: INC . lValue

    VARIDENTIFIER  shift, and go to state 26

    lValue  go to state 42


state 31

  101 expr: DEC . lValue

    VARIDENTIFIER  shift, and go to state 26

    lValue  go to state 43


state 32

   83 expr: FUNCIDENTIFIER . $@24 '(' functionArgs ')'

    $default  reduce using rule 82 ($@24)

    $@24  go to state 44


state 33

   81 expr: '-' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 45
    lValue      go to state 36
    consValues  go to state 37


state 34

  106 expr: '(' . expr ')'

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 46
    lValue      go to state 36
    consValues  go to state 37


state 35

   18 varDeclaration: variable '=' expr . ';'
   84 expr: expr . '+' expr
   85     | expr . '-' expr
   86     | expr . '*' expr
   87     | expr . '/' expr
   88     | expr . '<' expr
   89     | expr . '>' expr
   90     | expr . '%' expr
   91     | expr . OR expr
   92     | expr . AND expr
  102     | expr . GE expr
  103     | expr . LE expr
  104     | expr . NE expr
  105     | expr . EQ expr

    OR   shift, and go to state 47
    AND  shift, and go to state 48
    ';'  shift, and go to state 49
    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    NE   shift, and go to state 52
    EQ   shift, and go to state 53
    LE   shift, and go to state 54
    GE   shift, and go to state 55
    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60


state 36

   78 expr: lValue . '=' expr
   79     | lValue .
   94     | lValue . INCASSIGNMENT expr
   95     | lValue . DECASSIGNMENT expr
   96     | lValue . DIVIDEASSIGNMENT expr
   97     | lValue . MULTIPLYASSIGNMENT expr
   98     | lValue . INC
  100     | lValue . DEC

    INC                 shift, and go to state 61
    DEC                 shift, and go to state 62
    INCASSIGNMENT       shift, and go to state 63
    DECASSIGNMENT       shift, and go to state 64
    MULTIPLYASSIGNMENT  shift, and go to state 65
    DIVIDEASSIGNMENT    shift, and go to state 66
    '='                 shift, and go to state 67

    $default  reduce using rule 79 (expr)


state 37

   80 expr: consValues .

    $default  reduce using rule 80 (expr)


state 38

   30 functionDeclaration: VOID FUNCTION FUNCIDENTIFIER $@7 . '(' $@8 functionParam ')' $@9 openScope $@10 stmtList closeScope

    '('  shift, and go to state 68


state 39

   19 constDeclaration: CONST variable '=' expr . ';'
   84 expr: expr . '+' expr
   85     | expr . '-' expr
   86     | expr . '*' expr
   87     | expr . '/' expr
   88     | expr . '<' expr
   89     | expr . '>' expr
   90     | expr . '%' expr
   91     | expr . OR expr
   92     | expr . AND expr
  102     | expr . GE expr
  103     | expr . LE expr
  104     | expr . NE expr
  105     | expr . EQ expr

    OR   shift, and go to state 47
    AND  shift, and go to state 48
    ';'  shift, and go to state 69
    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    NE   shift, and go to state 52
    EQ   shift, and go to state 53
    LE   shift, and go to state 54
    GE   shift, and go to state 55
    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60


state 40

   25 functionDeclaration: type FUNCTION FUNCIDENTIFIER $@3 . '(' $@4 functionParam ')' $@5 openScope $@6 stmtList closeScope

    '('  shift, and go to state 70


state 41

   84 expr: expr . '+' expr
   85     | expr . '-' expr
   86     | expr . '*' expr
   87     | expr . '/' expr
   88     | expr . '<' expr
   89     | expr . '>' expr
   90     | expr . '%' expr
   91     | expr . OR expr
   92     | expr . AND expr
   93     | NOT expr .
  102     | expr . GE expr
  103     | expr . LE expr
  104     | expr . NE expr
  105     | expr . EQ expr

    $default  reduce using rule 93 (expr)


state 42

   99 expr: INC lValue .

    $default  reduce using rule 99 (expr)


state 43

  101 expr: DEC lValue .

    $default  reduce using rule 101 (expr)


state 44

   83 expr: FUNCIDENTIFIER $@24 . '(' functionArgs ')'

    '('  shift, and go to state 71


state 45

   81 expr: '-' expr .
   84     | expr . '+' expr
   85     | expr . '-' expr
   86     | expr . '*' expr
   87     | expr . '/' expr
   88     | expr . '<' expr
   89     | expr . '>' expr
   90     | expr . '%' expr
   91     | expr . OR expr
   92     | expr . AND expr
  102     | expr . GE expr
  103     | expr . LE expr
  104     | expr . NE expr
  105     | expr . EQ expr

    $default  reduce using rule 81 (expr)


state 46

   84 expr: expr . '+' expr
   85     | expr . '-' expr
   86     | expr . '*' expr
   87     | expr . '/' expr
   88     | expr . '<' expr
   89     | expr . '>' expr
   90     | expr . '%' expr
   91     | expr . OR expr
   92     | expr . AND expr
  102     | expr . GE expr
  103     | expr . LE expr
  104     | expr . NE expr
  105     | expr . EQ expr
  106     | '(' expr . ')'

    OR   shift, and go to state 47
    AND  shift, and go to state 48
    '>'  shift, and go to state 50
    '<'  shift, and go to state 51
    NE   shift, and go to state 52
    EQ   shift, and go to state 53
    LE   shift, and go to state 54
    GE   shift, and go to state 55
    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '*'  shift, and go to state 58
    '/'  shift, and go to state 59
    '%'  shift, and go to state 60
    ')'  shift, and go to state 72


state 47

   91 expr: expr OR . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 73
    lValue      go to state 36
    consValues  go to state 37


state 48

   92 expr: expr AND . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 74
    lValue      go to state 36
    consValues  go to state 37


state 49

   18 varDeclaration: variable '=' expr ';' .

    $default  reduce using rule 18 (varDeclaration)


state 50

   89 expr: expr '>' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 75
    lValue      go to state 36
    consValues  go to state 37


state 51

   88 expr: expr '<' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 76
    lValue      go to state 36
    consValues  go to state 37


state 52

  104 expr: expr NE . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 77
    lValue      go to state 36
    consValues  go to state 37


state 53

  105 expr: expr EQ . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 78
    lValue      go to state 36
    consValues  go to state 37


state 54

  103 expr: expr LE . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 79
    lValue      go to state 36
    consValues  go to state 37


state 55

  102 expr: expr GE . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 80
    lValue      go to state 36
    consValues  go to state 37


state 56

   84 expr: expr '+' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 81
    lValue      go to state 36
    consValues  go to state 37


state 57

   85 expr: expr '-' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 82
    lValue      go to state 36
    consValues  go to state 37


state 58

   86 expr: expr '*' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 83
    lValue      go to state 36
    consValues  go to state 37


state 59

   87 expr: expr '/' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 84
    lValue      go to state 36
    consValues  go to state 37


state 60

   90 expr: expr '%' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 85
    lValue      go to state 36
    consValues  go to state 37


state 61

   98 expr: lValue INC .

    $default  reduce using rule 98 (expr)


state 62

  100 expr: lValue DEC .

    $default  reduce using rule 100 (expr)


state 63

   94 expr: lValue INCASSIGNMENT . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 86
    lValue      go to state 36
    consValues  go to state 37


state 64

   95 expr: lValue DECASSIGNMENT . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 87
    lValue      go to state 36
    consValues  go to state 37


state 65

   97 expr: lValue MULTIPLYASSIGNMENT . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 88
    lValue      go to state 36
    consValues  go to state 37


state 66

   96 expr: lValue DIVIDEASSIGNMENT . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 89
    lValue      go to state 36
    consValues  go to state 37


state 67

   78 expr: lValue '=' . expr

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    expr        go to state 90
    lValue      go to state 36
    consValues  go to state 37


state 68

   30 functionDeclaration: VOID FUNCTION FUNCIDENTIFIER $@7 '(' . $@8 functionParam ')' $@9 openScope $@10 stmtList closeScope

    $default  reduce using rule 27 ($@8)

    $@8  go to state 91


state 69

   19 constDeclaration: CONST variable '=' expr ';' .

    $default  reduce using rule 19 (constDeclaration)


state 70

   25 functionDeclaration: type FUNCTION FUNCIDENTIFIER $@3 '(' . $@4 functionParam ')' $@5 openScope $@6 stmtList closeScope

    $default  reduce using rule 22 ($@4)

    $@4  go to state 92


state 71

   83 expr: FUNCIDENTIFIER $@24 '(' . functionArgs ')'

    STRING          shift, and go to state 24
    INTEGER         shift, and go to state 25
    VARIDENTIFIER   shift, and go to state 26
    TRUEBOOL        shift, and go to state 27
    FALSEBOOL       shift, and go to state 28
    NOT             shift, and go to state 29
    INC             shift, and go to state 30
    DEC             shift, and go to state 31
    FUNCIDENTIFIER  shift, and go to state 32
    '-'             shift, and go to state 33
    '('             shift, and go to state 34

    $default  reduce using rule 16 (functionArgs)

    functionArgs  go to state 93
    expr          go to state 94
    lValue        go to state 36
    consValues    go to state 37


state 72

  106 expr: '(' expr ')' .

    $default  reduce using rule 106 (expr)


state 73

   84 expr: expr . '+' expr
   85     | expr . '-' expr
   86     | expr . '*' expr
   87     | expr . '/' expr
   88     | expr . '<' expr
   89     | expr . '>' expr
   90     | expr . '%' expr
   91     | expr . OR expr
   91     | expr OR expr .
   92     | expr . AND expr
  102     | expr . GE expr
  103     | expr . LE expr
  104     | expr . NE expr
  105     | expr . EQ expr
